<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/background"
            android:contentDescription="@null"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/curved_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hello_arwan"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@null"
                    app:flow_verticalAlign="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/dicoding_logo"
            android:contentDescription="@null"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/dicoding_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_active_events"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/title_active_events"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_show_active_events"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/show_more"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_active_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clipToPadding="false"
            android:layout_marginTop="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_active_events"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="LinearLayoutManager"/>


        <TextView
            android:id="@+id/tv_past_events"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:text="@string/title_past_events"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rv_active_events"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_show_past_events"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/show_more"
            android:textSize="12sp"
            android:padding="0dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_active_events"
            tools:ignore="TouchTargetSizeCheck"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_past_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clipToPadding="false"
            android:layout_marginTop="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_past_events"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="LinearLayoutManager"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>